# sem3-coursework

./: .gitignore  CMakeLists.txt  MyRing.h  README.md  aspectratiopixmaplabel.cpp  aspectratiopixmaplabel.h  filters_inform.json  iconautosizepushbutton.h  image_filters.cpp  image_filters.h  image_processing.cpp  image_processing.h  imageautosizeview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  photored_be.ts  photored_ru.ts  recently_opened.json  set_FilterName_window.cpp  set_FilterName_window.h  set_FilterName_window.ui  utils.cpp  viewwithoutwheel.h  workerthread.cpp  workerthread.h
.cache/clangd/index/: MyRing.h.A177169DCC6358FF.idx  cvmatandqimage.cpp.41DAC9B05EB899DA.idx  cvmatandqimage.h.2D81AC166432D46A.idx  iconautosizepushbutton.h.648DC167F0D40D2D.idx  image_filters.cpp.0F8C891E0F8B01A0.idx  image_filters.h.895639DB147A4C94.idx  image_processing.cpp.3AE735F0FD8D4EF2.idx  image_processing.h.D892343AA9E83E70.idx  main.cpp.C5465884A355C1B1.idx  mainwindow.cpp.262AEA691375FF1D.idx  mainwindow.h.461B995682B0CA6F.idx  set_FilterName_window.cpp.B682543FBED3A075.idx  set_FilterName_window.h.BA60EF2BE7322627.idx  utils.cpp.143BA61353019DA3.idx  viewwithoutwheel.h.346D14310776AA82.idx  workerthread.cpp.EDC80A932F189A0E.idx  workerthread.h.586520779CA79EF4.idx
docs/: code_out.txt  ~$ПЗ.docx  Блок-схема 1.vsdx  Блок-схема 2.vsdx  Ведомость документов.vsdx  Диаграмма классов А2.vsdx  Диаграмма классов А3.vsdx  Лист задания.docx  ПЗ.docx
include/: MyRing.h  cvmatandqimage.h  iconautosizepushbutton.h  image_filters.h  image_processing.h  mainwindow.h  set_FilterName_window.h  viewwithoutwheel.h  workerthread.h
resources/: icons.qrc  mainwindow.ui
src/: cvmatandqimage.cpp  image_filters.cpp  image_processing.cpp  main.cpp  mainwindow.cpp  set_FilterName_window.cpp  utils.cpp  workerthread.cpp
translations/: photored_ru.ts
